# Music-Recommender-System

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
api/: main.py
data/: README.md
data/raw/: sample_artist_metadata.csv  sample_interactions.csv
src/music_recommender/: artifacts.py  baselines.py  cli.py  config.py  content.py  data.py  evaluate.py  metadata.py  model.py  preprocessing.py  ranking.py  recommend.py  service.py  utils.py
tests/: test_api.py  test_artifacts.py  test_content.py  test_data.py  test_evaluate.py  test_metadata.py  test_model.py  test_preprocessing.py  test_ranking.py  test_recommend.py  test_service.py
